# The-Game

./: .gitignore  CMakeLists.txt  README.md  setup.sh
source/: ball.cpp  ball.hpp  game_object.cpp  game_object.hpp  main.cpp  main_menu.cpp  main_menu.hpp  paddle.cpp  paddle.hpp  resource_manager.cpp  resource_manager.hpp  signals.cpp  signals.hpp  utility.cpp  utility.hpp  window.cpp  window.hpp  xorshift.cpp  xorshift.hpp
